Add javax.mail and activation for multipart response parsing